[package]
name = "request_rustler"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
wasm-bindgen = "0.2"
base64 = "0.13"
regex = "1.5"
url = "2.2"

jwt = "0.16.0"
sha2 = "0.10.8"
hmac = "0.12.1"
